# burn-bert-for-pretraining

./: Cargo.toml  README.md
src/: data.rs  error.rs  lib.rs  main.rs  train.rs
src/bert/: core.rs  data.rs  embedding.rs  head.rs  mod.rs  pretraining.rs
