[package]
name = "tinybert_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt      = "0.3.26"
thiserror      = "1.0.64"
derive_builder = "0.20.1"
parquet        = "53.0.0"
tokenizers     = { version  = "0.20.0", features = ['http'] }
burn           = { version  = "0.14.0", features = ['train', 'tui', 'wgpu']}
rand           = "0.8.5"
num-traits     = "0.2.19"