[package]
name = "tinybert_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt      = "0.3.26"
thiserror      = "1.0.64"
derive_builder = "0.20.1"
tokenizers     = { version  = "0.20.0", features = ['http'] }
burn           = { version  = "0.14.0", features = ['train', 'tui', 'wgpu']}
rand           = "0.8.5"
serde          = { version = "1.0.210", features = ["derive"] }
csv            = "1.3.0"
rayon = "1.10.0"
